# raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
scenes/: angel.gltf  ball-in-grass.blend  ball-in-grass.gltf  cornell.blend  cornell.blend1  cornell.glb  cornell.gltf  cornell_glass.blend  cornell_glass.glb  cornell_glass.gltf  cube.gltf  driftwood.glb  driftwood.gltf  grass.blend  grass.gltf  icospheres.gltf  lighthouse.gltf  monkey.blend  monkey.blend1  monkey.gltf  simple.gltf  text.blend  text.glb
src/: bvh.rs  camera.rs  color.rs  image.rs  lib.rs  light.rs  main.rs  material.rs  ray.rs  render.rs  sampler.rs  scene.rs  shapes.rs  sphere.rs  texture.rs  triangle.rs  vec3.rs
src/hittable/: mesh.rs  mod.rs  sphere.rs  triangle.rs
src/math/: mod.rs  ray.rs
src/primitive/: aabb.rs  color.rs  mod.rs  ray.rs  vec3.rs
src/scene/: camera.rs  light.rs  mod.rs
src/util/: image.rs  mod.rs  progress_bar.rs  rand.rs  statistics.rs
