[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = "0.30.0"
gltf = { version = "1.4.1", features = ["KHR_lights_punctual"] }
minifb = "0.28.0"
png = "0.17.16"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false
